fix: font on mobile

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -54,7 +54,7 @@
 
 @layer components {
   .container {
-    @apply min-w-full px-3 py-8 lg:px-12 lg:py-20 2xl:px-72;
+    @apply min-w-full px-3 py-8 xl:px-12 xl:py-20 2xl:px-72;
   }
 
   header.scrolled::before {
@@ -62,7 +62,7 @@
   }
 
   .heading {
-    @apply mb-12 text-center text-[36px] font-semibold lg:mb-10 lg:text-[48px];
+    @apply mb-12 text-center text-[28px] font-semibold xl:mb-10 md:text-[48px];
   }
 
   .btn {
@@ -103,7 +103,7 @@
 
   .menu-modal,
   .enquiry-modal {
-    @apply fixed top-0 right-0 h-full w-full translate-x-full space-y-5 bg-white p-5 transition-transform duration-300 lg:w-[30%] lg:p-12 lg:pt-6 2xl:max-w-[24%];
+    @apply fixed top-0 right-0 h-full w-full translate-x-full space-y-5 bg-white p-5 transition-transform duration-300 xl:w-[30%] xl:p-12 xl:pt-6 2xl:max-w-[24%];
   }
 
   .menu-modal.active,
@@ -113,7 +113,7 @@
 
   .team-button-next,
   .team-button-prev {
-    @apply absolute top-1/2 hidden -translate-y-1/2 cursor-pointer !bg-transparent lg:!block;
+    @apply absolute top-1/2 hidden -translate-y-1/2 cursor-pointer !bg-transparent xl:!block;
   }
 
   .team-button-next {
@@ -131,7 +131,7 @@
 
   .swiper-button-next,
   .swiper-button-prev {
-    @apply bg-secondary z-50 !hidden !h-[46px] !w-[46px] cursor-pointer rounded-full lg:!block;
+    @apply bg-secondary z-50 !hidden !h-[46px] !w-[46px] cursor-pointer rounded-full xl:!block;
   }
 
   .swiper-button-next {
